06-apps-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  ingressClassName: nginx 
  rules:
  - host: "argocd-web.duckdns.org"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: argocd-server
            port:
              number: 443
  tls:
  - hosts:
    - argocd-web.duckdns.org
    secretName: argocd-secret
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kibana-ui-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  ingressClassName: nginx 
  rules:
  - host: "kibana-ui.duckdns.org"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: efk-stack-kibana
            port:
              number: 5601
  tls:
  - hosts:
    - kibana-ui.duckdns.org
    secretName: kibana-cert
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ui-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  ingressClassName: nginx 
  rules:
  - host: "grafana-ui.duckdns.org"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: prometheus-grafana-stack
            port:
              number: 80
  tls:
  - hosts:
    - grafana-ui.duckdns.org
    secretName: grafana-cert

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: "avshaproject.duckdns.org"
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: app-service
            port:
              number: 8080
  tls:
  - secretName: app-cert
    hosts:
      - "avshaproject.duckdns.org"
